chore: add buildx, iconify, and toman to cspell words
Added buildx, iconify, and toman to the cspell words to prevent them from being flagged as misspelled.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
     "cSpell.language": "en,fa-IR",
     "cSpell.words": [
+        "buildx",
         "daisyui",
         "Faraz",
         "Gecut",
+        "iconify",
+        "toman",
         "Vazirmatn",
         "webp",
         "دمنوش"
-    ]
+    ],
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
